--- a/main.html
+++ b/main.html
@@ -81,6 +81,7 @@ input[type=submit]:hover {
        <script>
        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
        </script>
+	    <br>
        <marquee style="" scrollamount="2" scrolldelay="5" direction="right" onmouseover="this.stop()" onmouseout="this.start()"><a target="_blank" href="https://deepcoder.company.site/">Click Here To Go To The New Shop !</a></marquee>
     </div>
     <div class="section active" id="section1">
@@ -99,7 +100,8 @@ input[type=submit]:hover {
                 <source src="http://stream.zeno.fm/fpkgv05zra0uv" type="audio/mpeg">
               Your browser does not support the stream :( https://browsehappy.com .
               </audio>
-              <marquee style="" scrollamount="2" scrolldelay="5" direction="right" onmouseover="this.stop()" onmouseout="this.start()"><a target="_blank" href="https://deepcoder.00webhostapp.com/RADIOZU.html"><img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"> ( Romanian ) Radio ZU ( Romanian )  <img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"></a></marquee>
+		<br>
+              <marquee style="" scrollamount="2" scrolldelay="5" direction="right" onmouseover="this.stop()" onmouseout="this.start()"><a target="_blank" href="RADIOZU.html"><img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"> ( Romanian ) Radio ZU ( Romanian )  <img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"></a></marquee>
         </div>
         <div class="slide" id="slide3">
             <h1><span style="font-family: 'trebuchet ms', geneva;">Deep_Lofi</span></h1>
@@ -111,7 +113,8 @@ input[type=submit]:hover {
               Your browser does not support the stream :( https://browsehappy.com .
               </audio>
         </div>
-        <marquee style="" scrollamount="2" scrolldelay="5" direction="right" onmouseover="this.stop()" onmouseout="this.start()"><a target="_blank" href="https://deepcoder.00webhostapp.com/RADIOZU.html"><img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"> ( Romanian ) Radio ZU ( Romanian )  <img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"></a></marquee>
+	    <br>
+        <marquee style="" scrollamount="2" scrolldelay="5" direction="right" onmouseover="this.stop()" onmouseout="this.start()"><a target="_blank" href="RADIOZU.html"><img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"> ( Romanian ) Radio ZU ( Romanian )  <img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"></a></marquee>
     </div>
     <div class="section" id="section2">
         <div class="intro">
