--- a/mobile.html
+++ b/mobile.html
@@ -70,7 +70,7 @@ input[type=submit]:hover {
 
 <div id="fullpage">
     <div class="section " id="section0">
-	    <h2><span style="font-family: 'trebuchet ms', geneva;">Deep_Coder</span></h2>
+	    <h2><span style="font-family: 'trebuchet ms', geneva;font-size:40px;">Deep_Coder</span></h2>
         <br>
         <br>
         <h3><span style="font-family: 'trebuchet ms', geneva;">Scroll down or click the buttons at the top</span></h3>
@@ -88,12 +88,12 @@ input[type=submit]:hover {
     <div class="section active" id="section1">
         <div class="slide" id="slide1">
             <div class="intro">
-                <h2><span style="font-family: 'trebuchet ms', geneva;">My Radio Stations</span></h2>
+                <h2><span style="font-family: 'trebuchet ms', geneva;font-size:40px;">My Radio Stations</span></h2>
                 
             </div>
         </div>
         <div class="slide active" id="slide2">
-            <h2 style="text-align: center;"><span style="font-family: 'trebuchet ms', geneva;">Deep_Radio</span></h2>
+            <h2 style="text-align: center;"><span style="font-family: 'trebuchet ms', geneva;font-size:40px;">Deep_Radio</span></h2>
             <br>
             <br>
 			<audio controls="">
@@ -105,7 +105,7 @@ input[type=submit]:hover {
               <marquee style="" scrollamount="2" scrolldelay="5" direction="right" onmouseover="this.stop()" onmouseout="this.start()"><a target="_blank" href="RADIOZU.html"><img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"> ( Romanian ) Radio ZU ( Romanian )  <img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool"></a></marquee>
         </div>
         <div class="slide" id="slide3">
-            <h2 style="text-align: center;"><span style="font-family: 'trebuchet ms', geneva;">Deep_Lofi</span></h2>
+            <h2 style="text-align: center;"><span style="font-family: 'trebuchet ms', geneva;font-size:40px;">Deep_Lofi</span></h2>
             <br>
             <br>
             <audio controls="">
