--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="wb:op" content="f85215855dac6d8f3a3646255af519aa"/>
 	<title>Demo: Cantina Negrar preloader deconstruction</title>
 	<meta name="description" content="LOADING PAGE">
 
