--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@ if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i
     
 	<title>Deep's Website</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="wb:op" content="f85215855dac6d8f3a3646255af519aa"/>
     <meta name="description" content="Another website made by deepcoder">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
